DemoMetadata/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountPlannedIndexes__c</fullName>
        <label>Период планирования</label>
        <summarizedField>PartnerIndex__c.IndexDate__c</summarizedField>
        <summaryForeignKey>PartnerIndex__c.Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BIK__c</fullName>
        <label>БИК</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Баланс</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BankAccount__c</fullName>
        <label>Расчетный счет</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Correspondent__c</fullName>
        <label>Банк-корреспондент</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <label>Бренд</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cars_already_issued__c</fullName>
        <label>Автомобилей выпущено</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cars_final_conf__c</fullName>
        <label>Автомобилей подтверждено</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Chairs_Rent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Аренда детских кресел</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cities__c</fullName>
        <label>Лист городов</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Екатеринбург</fullName>
                </value>
                <value>
                    <fullName>Москва</fullName>
                </value>
                <value>
                    <fullName>Новосибирск</fullName>
                </value>
                <value>
                    <fullName>Омск</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>Город</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommisionKASKO__c</fullName>
        <formula>OSAGOSalesCurrentMonth__c * 0.4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Комиссия по КАСКО (40%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CommisionOSAGO__c</fullName>
        <formula>OSAGOSalesCurrentMonth__c * 0.2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Комиссия по ОСАГО (20%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CommissionOMS__c</fullName>
        <formula>OMSPolicies__c *450</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Комиссия по ОМС</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corp_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Корп.контракт</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CorrespondentAccount__c</fullName>
        <label>Корреспондентский счет</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Страна</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Россия</fullName>
                </value>
                <value>
                    <fullName>Финляндия</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coupons__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Купоны</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRS__c</fullName>
        <label>Авто с DRS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drivers_On_boarding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drivers On-boarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FullCompanyName__c</fullName>
        <label>Полное наименование фирмы</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeneralAccountant__c</fullName>
        <label>Главный бухгалтер</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeneralDirector__c</fullName>
        <label>Гендиректор</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN__c</fullName>
        <label>ИНН</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KASKOSalesCurrentMonth__c</fullName>
        <label>Продажи КАСКО в текущем месяце</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.ProductFamily__c</field>
            <operation>equals</operation>
            <value>КАСКО</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KPP__c</fullName>
        <label>КПП</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Type__c</fullName>
        <label>Тип юридического лица</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ООО</fullName>
                </value>
                <value>
                    <fullName>ИП</fullName>
                </value>
                <value>
                    <fullName>СМЗ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Macroregion__c</fullName>
        <label>Округ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Урал</fullName>
                </value>
                <value>
                    <fullName>Центр</fullName>
                </value>
                <value>
                    <fullName>Сибирь</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Маркетинговый контракт</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewEvent__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/n/NewEvent&quot;, &quot;Новая встреча&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Новая встреча</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OGRNIP__c</fullName>
        <inlineHelpText>Основной государственный регистрационный номер индивидуального предпринимателя</inlineHelpText>
        <label>ОГРНИП</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OGRN__c</fullName>
        <inlineHelpText>Основной государственный регистрационный номер</inlineHelpText>
        <label>ОГРН</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OKATO__c</fullName>
        <inlineHelpText>Общероссийский классификатор объектов административно-территориального деления</inlineHelpText>
        <label>ОКАТО</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OKVED__c</fullName>
        <label>ОКВЭД</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMSPoliciesTotal__c</fullName>
        <label>Полисы ОМС (руб)</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.ProductFamily__c</field>
            <operation>equals</operation>
            <value>ОМС</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OMSPolicies__c</fullName>
        <label>Полисы ОМС (штук)</label>
        <summarizedField>Opportunity.TotalOpportunityQuantity</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.ProductFamily__c</field>
            <operation>equals</operation>
            <value>ОМС</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSAGOSalesCurrentMonth__c</fullName>
        <label>Продажи ОСАГО в текущем месяце</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.ProductFamily__c</field>
            <operation>equals</operation>
            <value>ОСАГО</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Продуктовая линейка</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scouts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scouts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Сегмент</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>Головной офис</fullName>
                    <label>Головной Офис</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Сервисный контракт</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Name_Legal_Entity__c</fullName>
        <label>Короткое имя</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signatory_person__c</fullName>
        <label>Подписавший</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signatory_reason__c</fullName>
        <label>Причина подписи</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_System__c</fullName>
        <label>Система налогообложения</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalCommissionCurrentMonth__c</fullName>
        <formula>CommisionOSAGO__c +  CommisionKASKO__c +  OMSPoliciesTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Комиссия в текущем месяце</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalSalesThisMonth__c</fullName>
        <formula>OSAGOSalesCurrentMonth__c +  KASKOSalesCurrentMonth__c +  OMSPoliciesTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Всего продаж в текущем месяце</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkingHours__c</fullName>
        <label>График работы</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>billing_id__c</fullName>
        <label>Платёжный идентификатор</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>Эл.почта</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Active__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partner_Company</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Active__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Taxi_accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>такс</value>
        </filters>
        <label>Аккаунты - Мой Таксопарк</label>
    </listViews>
    <recordTypes>
        <fullName>Car_manufacturer</fullName>
        <active>true</active>
        <label>Автопроизводитель</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer</fullName>
        <active>true</active>
        <label>Дилер</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual_Entrepreneur</fullName>
        <active>false</active>
        <label>Партнер ИП</label>
    </recordTypes>
    <recordTypes>
        <fullName>Leasing_Company</fullName>
        <active>true</active>
        <label>Лизинговая компания</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal_entity</fullName>
        <active>true</active>
        <label>Таксопарк</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lessee</fullName>
        <active>true</active>
        <label>Лизингополучатель</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Company</fullName>
        <active>true</active>
        <label>Партнёр Юр. Лицо</label>
    </recordTypes>
    <recordTypes>
        <fullName>Surety</fullName>
        <active>true</active>
        <label>Поручитель</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>